# dental-seg-api

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
app/: main.py
app/api/v1/: model.py
app/core/: config.py  log_formatters.py  logger.py
app/dependencies/: model.py
app/exceptions/: model.py
app/middlewares/: process_time_header_middleware.py
app/neural_networks/dataset/: dental_dataset.py  segmentation_transform.py  tooth_region_extractor.py
app/neural_networks/models/: attention_unet.py  dense_unet.py  model_loader.py  residual_unet.py  unet.py  unet_3plus.py
app/neural_networks/predictor/: model_predictor.py
app/services/: model_service.py
app/tests/: test_api.py
app/utils/: image_utils.py
app/validators/: input_validator.py
